samples/_failures_safe/1761556000_2d5fb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd249469.c: In function ‘main’:
./samples/SAFE/__tmp_cd249469.c:159:5: error: expected expression at end of input
  159 |     if (scanf("%d", &start) != 1 ||
      |     ^~
./samples/SAFE/__tmp_cd249469.c:159:5: error: expected declaration or statement at end of input
